force-app/main/default/objects/MUSW__Inspection__c/fields/CVRD_DS_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Number</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>