force-app/main/default/objects/MUSW__Inspection__c/recordTypes/CVRD_DS_Application_Inspection.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Application_Inspection</fullName>
    <active>true</active>
    <label>Application Inspection</label>
</RecordType>