force-app/main/default/objects/MUSW__Inspection__c/recordTypes/MUSW__Code_Enforcement_Inspection.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Code_Enforcement_Inspection</fullName>
    <active>true</active>
    <label>Code Enforcement Inspection</label>
</RecordType>