force-app/main/default/objects/MUSW__Inspection__c/recordTypes/MUSW__Permit_Inspection.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Inspection</fullName>
    <active>false</active>
    <label>Permit Inspection</label>
</RecordType>