force-app/main/default/objects/MUSW__Inspection__c/validationRules/Due_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(MUSW__Due_Date__c)),
TODAY() &gt; MUSW__Due_Date__c
)</errorConditionFormula>
    <errorDisplayField>MUSW__Due_Date__c</errorDisplayField>
    <errorMessage>You cannot select a past date.</errorMessage>
</ValidationRule>