force-app/main/default/objects/MUSW__Inspection__c/validationRules/Scheduled_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_start_date</fullName>
    <active>true</active>
    <description>Scheduled start date Should not be in future.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(MUSW__Scheduled_Start_Date__c )),   
    TODAY() &gt; MUSW__Scheduled_Start_Date__c 
)</errorConditionFormula>
    <errorDisplayField>MUSW__Scheduled_Start_Date__c</errorDisplayField>
    <errorMessage>You cannot select a past date.</errorMessage>
</ValidationRule>