force-app/main/default/objects/MUSW__Inspection__c/listViews/Upcoming_Inspection.listView-meta.xml
<ListView>
    <fullName>Upcoming_Inspection</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:5</value>
    </filters>
    <label>Upcoming Inspection</label>
</ListView>